Ajustes da rota com template

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,21 @@
-<div style="background-color: blue; color: white; font-size: 36px; padding: 30px;">
+<div style="background-color: blue; color: white; font-size: 36px; padding: 15px;">
   <ul>
-    <li style="display: inline; cursor: point; padding: 5px;"
+    <li style="display: inline; cursor: point; padding: 5px 20px;"
         [routerLinkActive]="['true']"
         [routerLinkActiveOptions]="{ exact: true }"
-        [routerLink]="'/rota-quatro'">PAGE QUATRO</li>
-    <li style="display: inline; cursor: point; padding: 5px;"
+        [routerLink]="'/rota-quatro'">Página Quatro</li>
+    <li style="display: inline; cursor: point; padding: 5px 20px;"
         [routerLinkActive]="['true']"
         [routerLinkActiveOptions]="{ exact: true }"
-        [routerLink]="'/rota-cinco'">PAGE CINCO</li>
-    <li style="display: inline; cursor: point; padding: 5px;"
+        [routerLink]="'/rota-cinco'">Página Cinco</li>
+    <li style="display: inline; cursor: point; padding: 5px 20px;"
         [routerLinkActive]="['true']"
         [routerLinkActiveOptions]="{ exact: true }"
-        [routerLink]="'/rota-seis'">PAGE SEIS</li>
+        [routerLink]="'/rota-seis'">Página Seis</li>
+    <li style="display: inline; cursor: point; padding: 5px 20px;"
+        [routerLinkActive]="['true']"
+        [routerLinkActiveOptions]="{ exact: true }"
+        [routerLink]="'/teste-modulo'">Teste Módulo</li>
   </ul>
 </div>
 
