--- a/src/app/templates/default/default.component.html
+++ b/src/app/templates/default/default.component.html
@@ -1,1 +1,4 @@
-<p>default works!</p>
+<div style="border: 2px dotted #ffffff">
+  <p>Envolvido pelo template. O pontilhado representa o template.</p>
+  <router-outlet></router-outlet>
+</div>
